# at2-web

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: deploy.yaml  rust.yml
at2-ns/: .gitignore  Cargo.toml  at2-ns.proto  at2-ns.service  build.rs
at2-ns/src/: client.rs  contact.rs  lib.rs  main.rs  proto.rs  rpc.rs  user.rs
at2-ns/src/user/: full.rs  mod.rs  thin.rs
dns/: Cargo.toml  at2-dns.service  build.rs  dns.proto
dns/src/: main.rs  proto.rs  rpc.rs
src/: main.rs
src/pages/: new_account.rs  style.rs  your_account.rs
web/: .gitignore  Cargo.toml  build.rs  index.html
web/src/: config.rs  main.rs  users_agent.rs
web/src/agents/: get_users.rs  mod.rs  users.rs
web/src/agents/node/: get_balance.rs  get_last_sequence.rs  get_latest_transactions.rs  mod.rs  send_asset.rs
web/src/pages/: mod.rs  new_account.rs  select_user.rs  speedtest.rs  style.rs  summary.rs  welcome.rs  your_account.rs
web/src/pages/your_account/: mod.rs  send_transaction_builder.rs  send_transaction_dialog.rs  transaction_builder.rs
