[package]
name = "at2-ns"
version = "0.1.0"
authors = ["Valérian Rousset <tharvik@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
prost = { version = "0.8", default-features = false }
tonic = { version = "0.5", default-features = false, features = ["codegen", "prost"] }

# bins
bincode = { version = "1", optional = true }
drop = { git = "https://github.com/Distributed-EPFL/drop.git", branch = "add-wasm", optional = true }

# client
grpc-web-client = { git = "https://github.com/titanous/grpc-web-client", optional = true }
http = { version = "0.2", optional = true }
serde = { version = "1", optional = true }
snafu = { version = "0.6", optional = true }

# server
structopt = { version = "0.3", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
tonic-web = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-fmt = { version = "0.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["prost"] }

[features]
default = ["client"]
client = [
	"bincode",
	"drop",
	"grpc-web-client",
	"http",
	"serde",
	"snafu",
]
server = [
	"bincode",
	"drop",
	"snafu",
	"structopt",
	"tokio",
	"tonic-web",
	"tracing",
	"tracing-fmt",
]

[[bin]]
name = "server"
required-features = ["server"]
