[package]
name = "at2-web"
version = "0.1.0"
authors = ["Valérian Rousset <tharvik@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
at2-ns = { path = "../at2-ns" }
drop = { git = "https://github.com/Distributed-EPFL/drop.git", branch = "add-wasm" }
gloo-timers = "0.2"
http = "0.2"
js-sys = "0.3"
material-yew = { version = "0.1", features = ["button", "dialog", "list", "formfield", "textfield"] }
wasm-bindgen-futures = "0.4"
yew = "0.18"

[build-dependencies]
duct = "0.13"
