[package]
name = "at2-web"
version = "0.1.0"
authors = ["Valérian Rousset <tharvik@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
at2-ns = { path = "../at2-ns", features = ["serde"] }
at2-node = { git = "https://github.com/Distributed-EPFL/at2-node.git" }
drop = { git = "https://github.com/Distributed-EPFL/drop.git" }
sieve = { git = "https://github.com/Distributed-EPFL/sieve" }
chrono-humanize = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
gloo-timers = "0.2"
http = "0.2"
js-sys = "0.3"
rand = "0.8"
snafu = "0.6"
wasm-bindgen-futures = "0.4"
yew = "0.18"
[dependencies.material-yew]
version = "0.1"
features = [
	"button",
	"dialog",
	"list",
	"formfield",
	"linear-progress",
	"textfield",
]

[build-dependencies]
duct = "0.13"
